fixed simple h3 alignment issue

--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ img {
     padding: 1rem;
   }
 
-  header h1, h2 {
+  header h1, h2, h3 {
     text-align: center;
   }
 }
@@ -216,7 +216,7 @@ img {
     padding: 1rem;
   }
 
-  header h1, h2 {
+  header h1, h2, h3 {
     text-align: center;
   }
 
